tests/machine/x/rust/group_by_conditional_sum.error
line 0: compile: exit status 1
error[E0308]: mismatched types
  --> /workspace/mochi/tests/machine/x/rust/group_by_conditional_sum.rs:26:405
   |
26 | ...e: sum(&{ let mut tmp3 = Vec::new();for x in &g.clone().items { tmp3.push(if x.flag != Default::default() { x.val } else { 0 }); } tmp3 }) / sum(&{ let mut tmp4 = Vec::new();for x in &g.clone().items { tmp4.push(x.val); } tmp4 }) })...
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `f64`, found `i32`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.

#[derive(Default, Debug, Clone, PartialEq)]